--- a/calculo_integral/index.html
+++ b/calculo_integral/index.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prácticas Dirigidas - Cálculo Integral</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Resolución de Prácticas</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div class="container">
-        <div class="box" onclick="loadMarkdown('practica_dirigida_01.md')">Práctica dirigida N°1</div>
-    </div>
-    <div id="content" class="content"></div>
+    <h1>Prácticas de Matemáticas</h1>
+    <button onclick="abrirPractica()">Práctica 01</button>
 
-    <script src="https://cdn.jsdelivr.net/npm/markdown-it/dist/markdown-it.min.js"></script>
-    <script src="script.js"></script>
+    <script>
+        function abrirPractica() {
+            window.open('latex/practica_01.pdf', '_blank');
+        }
+    </script>
 </body>
 </html>
